Implementação do toast mensagem!

--- a/src/app/pages/listagem/listagem.component.html
+++ b/src/app/pages/listagem/listagem.component.html
@@ -1,5 +1,11 @@
-<div>
-  <div>
-    <h1>Listagem</h1>
+<div class="container">
+  <div class="row">
+    <div class="Register">
+      <h1>Register</h1>
+      <div></div>
+    </div>
+    <div class="Listagem">
+      <h1>Listagem</h1>
+    </div>
   </div>
 </div>
