Cadastro de produtos 100%, ainda trabalhando na listagem!

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -6,6 +6,8 @@
         <div class="box">
           <label for="name">Name Completo:</label>
           <input
+            ngModel
+            required
             pInputText
             type="text"
             id="name"
@@ -17,6 +19,8 @@
         <div class="box">
           <label for="Email">Email:</label>
           <input
+            ngModel
+            required
             pInputText
             type="text"
             id="Email"
@@ -28,6 +32,8 @@
         <div class="box">
           <label for="password">Password:</label>
           <input
+            ngModel
+            required
             pInputText
             id="password"
             type="password"
