--- a/src/app/pages/listagem/listagem.component.css
+++ b/src/app/pages/listagem/listagem.component.css
@@ -1,3 +1,5 @@
+@import 'primeicons/primeicons.css';
+
 .container {
   display: flex;
   background-color: rgb(231, 233, 235);
@@ -17,17 +19,79 @@ h1 {
 }
 
 .Register {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   width: 50%;
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
-  border: 1px solid black;
 }
 
 .Listagem {
+  flex-direction: column;
   width: 50%;
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
-  border: 1px solid black;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  border-radius: 10px;
+  padding: 30px;
+  margin: 10px;
+  width: 500px;
+  height: 500px;
+  background-color: rgb(248, 248, 248);
+}
+
+input {
+  width: 100%;
+}
+
+textarea {
+  width: 100%;
+}
+
+.p-float-label {
+  width: 100%;
+}
+.container-btn {
+  width: 100%;
+  margin: 10px 0px 0px 0px;
+}
+
+.button {
+  width: 100%;
+}
+
+span {
+  margin: 10px;
+}
+
+.card.flex.justify-content-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 50%;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+}
+
+.cdk-drop-list.p-orderlist-list {
+  padding: 30px;
+}
+
+p-orderlist {
+  width: 90%;
 }
