--- a/src/app/pages/listagem/listagem.component.html
+++ b/src/app/pages/listagem/listagem.component.html
@@ -1,11 +1,91 @@
 <div class="container">
   <div class="row">
     <div class="Register">
-      <h1>Register</h1>
-      <div></div>
+      <div class="box">
+        <h1>Register Products</h1>
+        <span class="p-float-label">
+          <input
+            [(ngModel)]="name"
+            name="name"
+            type="text"
+            pInputText
+            id="name"
+          />
+          <label htmlFor="email">Name</label>
+        </span>
+        <span class="p-float-label">
+          <textarea
+            ngModel
+            required
+            [(ngModel)]="description"
+            name="description"
+            type="text"
+            pInputText
+            id=" description"
+          >
+          </textarea>
+          <label htmlFor="description">description</label>
+        </span>
+        <span class="p-float-label">
+          <input
+            ngModel
+            required
+            [(ngModel)]="price"
+            name="Price"
+            type="number"
+            pInputText
+            id=" Price"
+          />
+          <label htmlFor="Price">Price</label>
+        </span>
+
+        <div class="container-btn">
+          <button
+            (click)="addProduct()"
+            pButton
+            class="button"
+            label="Sign Up"
+          ></button>
+        </div>
+      </div>
     </div>
-    <div class="Listagem">
-      <h1>Listagem</h1>
+
+    <div class="card flex justify-content-center">
+      <p-orderList
+        class="container-list"
+        [value]="productList"
+        [listStyle]="{ 'max-height': '30rem' }"
+        header="Listing Products"
+      >
+        <ng-template let-product pTemplate="item">
+          <div class="flex align-items-center p-2 w-full flex-wrap">
+            <div class="w-full text-center lg:w-auto lg:text-left">
+              <img
+                src="https://primefaces.org/cdn/primeng/images/demo/product/{{
+                  product.image
+                }}"
+                [alt]="product.name"
+                class="mr-3 shadow-3 w-7rem mb-3 lg:w-5rem lg:mb-auto"
+              />
+            </div>
+            <div class="flex-1">
+              <h5 class="mb-2">{{ product.name }}</h5>
+              <i class="pi pi-tag vertical-align-middle mr-2"></i>
+              <span class="vertical-align-middle line-height-1">
+                Description:
+                {{ product.description }}</span
+              >
+
+              <span class="pi pi-user-edit" style="font-size: 1rem"></span>
+              <i class="pi pi-times" style="font-size: 1rem"></i>
+            </div>
+
+            <div class="flex flex-column align-items-end">
+              <h6 class="mb-2">Price{{ "$ " + product.price }}</h6>
+            </div>
+          </div>
+        </ng-template>
+      </p-orderList>
     </div>
   </div>
 </div>
