--- a/src/app/pages/listagem/listagem.component.html
+++ b/src/app/pages/listagem/listagem.component.html
@@ -54,20 +54,13 @@
       <p-orderList
         class="container-list"
         [value]="productList"
-        [listStyle]="{ 'max-height': '30rem' }"
+        [listStyle]="{ 'max-height': '40rem' }"
         header="Listing Products"
+        filterBy="name"
+        filterPlaceholder="Filter by name"
       >
         <ng-template let-product pTemplate="item">
           <div class="flex align-items-center p-2 w-full flex-wrap">
-            <div class="w-full text-center lg:w-auto lg:text-left">
-              <img
-                src="https://primefaces.org/cdn/primeng/images/demo/product/{{
-                  product.image
-                }}"
-                [alt]="product.name"
-                class="mr-3 shadow-3 w-7rem mb-3 lg:w-5rem lg:mb-auto"
-              />
-            </div>
             <div class="flex-1">
               <h5 class="mb-2">{{ product.name }}</h5>
               <i class="pi pi-tag vertical-align-middle mr-2"></i>
@@ -76,8 +69,8 @@
                 {{ product.description }}</span
               >
 
-              <span class="pi pi-user-edit" style="font-size: 1rem"></span>
-              <i class="pi pi-times" style="font-size: 1rem"></i>
+              <button class="pi pi-user-edit" style="font-size: 1rem"></button>
+              <button class="pi pi-times" style="font-size: 1rem"></button>
             </div>
 
             <div class="flex flex-column align-items-end">
