--- a/src/app/pages/listagem/listagem.component.css
+++ b/src/app/pages/listagem/listagem.component.css
@@ -110,4 +110,47 @@ p-orderlist {
   cursor: pointer;
 }
 
-/*MODAL*/
+/*RESPONSIVIDADE*/
+
+@media screen and (max-width: 1115px) {
+  .container {
+    height: auto;
+  }
+
+  .card.flex.justify-content-center {
+    width: 100%;
+  }
+  .Register {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    margin: 20px 0px 20px 0px;
+  }
+
+  .box {
+    width: 90%;
+    height: 90%;
+    margin: 0px !important ;
+    padding: 30px;
+  }
+
+  .row {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+
+  .card.flex.justify-content-center {
+    width: 100%;
+
+    margin: 0px 0px 20px 0px;
+    padding: 0px;
+  }
+}
+
+/* Estilos para telas menores */
