--- a/src/app/pages/listagem/listagem.component.css
+++ b/src/app/pages/listagem/listagem.component.css
@@ -1,5 +1,6 @@
 @import 'primeicons/primeicons.css';
 
+/*parte do registro de produtos*/
 .container {
   display: flex;
   background-color: rgb(231, 233, 235);
@@ -11,6 +12,29 @@ h1 {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
+}
+
+h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 5px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  margin: 20px 0px 0px 0px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+h3 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande';
+  margin: 0px;
+}
+
+p {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande';
+  margin: 0px;
 }
 
 .row {
@@ -52,11 +76,16 @@ h1 {
   background-color: rgb(248, 248, 248);
 }
 
+/*parte do registro de produtos*/
+
+/*Partes que pertecem os 2*/
 input {
+  margin: 0px 0px 15px 0px;
   width: 100%;
 }
 
 textarea {
+  margin: 0px 0px 15px 0px;
   width: 100%;
 }
 
@@ -75,8 +104,10 @@ textarea {
 span {
   margin: 10px;
 }
+/*Partes que pertecem os 2*/
 
-.card.flex.justify-content-center {
+/*Parque da Listagem de produtos*/
+.container-list {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -86,14 +117,6 @@ span {
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
-}
-
-.cdk-drop-list.p-orderlist-list {
-  padding: 30px;
-}
-
-p-orderlist {
-  width: 90%;
 }
 
 .pi.pi-user-edit {
@@ -110,25 +133,106 @@ p-orderlist {
   cursor: pointer;
 }
 
-/*RESPONSIVIDADE*/
+.list {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  height: 100%;
+  width: 100%;
+}
 
+.list-item {
+  border-radius: 5px;
+  background-color: rgb(241, 241, 240);
+  margin: 5px;
+  padding: 20px;
+}
+
+.container-list-group {
+  overflow-y: scroll;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 500px;
+  width: 500px;
+  background-color: rgb(248, 248, 248);
+  border-radius: 10px;
+}
+
+/*Icons/btn*/
+.pi-file-excel {
+  margin: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.container-btn {
+  margin: auto;
+  display: flex;
+  justify-content: right;
+}
+/*Icons/btn*/
+
+/*Modal*/
+.container-modal {
+  padding: 20px 20px 20px 0px;
+}
+/*Modal*/
+
+/*Icone Return para Login*/
+
+.retorn {
+  display: flex;
+  margin: 0;
+  justify-content: left;
+}
+
+.pi-arrow-left {
+  justify-content: left;
+  display: flex;
+  cursor: pointer;
+  border: 0;
+  background-color: transparent;
+}
+
+/*Icone Return para Login*/
+
+/*Parque da Listagem de produtos*/
+
+/*RESPONSIVIDADE DO LAYOUT*/
 @media screen and (max-width: 1115px) {
   .container {
     height: auto;
   }
 
-  .card.flex.justify-content-center {
-    width: 100%;
-  }
   .Register {
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding: 0px;
     margin: 20px 0px 20px 0px;
+  }
+
+  .container-list {
+    width: 100%;
+    padding: 0px;
+    margin: 20px 0px 20px 0px;
+  }
+
+  .card {
+    width: 90%;
+    margin: 20px 0px 20px 0px;
+  }
+
+  .list {
+    padding: 30px;
   }
 
   .box {
@@ -144,13 +248,5 @@ p-orderlist {
     width: 100%;
     height: 100%;
   }
-
-  .card.flex.justify-content-center {
-    width: 100%;
-
-    margin: 0px 0px 20px 0px;
-    padding: 0px;
-  }
 }
-
-/* Estilos para telas menores */
+/*RESPONSIVIDADE DO LAYOUT*/
