--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -84,3 +84,19 @@ h1 {
   padding: 0px 5px 0px 0px;
   text-align: right;
 }
+
+@media screen and (max-width: 483px) {
+  .container {
+    height: 100%;
+  }
+  .row {
+    display: flex;
+    flex-direction: column;
+    width: 380px;
+    height: 380px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+  }
+}
